tools/rpk-automation/gen/22.3/rpk-redpanda-tune-list.adoc
= rpk redpanda tune list
:description: rpk redpanda tune list

List available redpanda tuners and check if they are enabled and 
supported by your system

To enable a tuner it must be set in the `redpanda.yaml` configuration file
under rpk section, e.g:

  rpk:
      tune_cpu: true
      tune_swappiness: true

You may use 'rpk redpanda config set' to enable or disable a tuner.

== Usage

[,bash]
----
rpk redpanda tune list [flags]
----

== Flags

[cols="1m,1a,2a]
|===
|*Value* |*Type* |*Description*

|`--config` |string |Redpanda config file, if not set the file will be searched for in the default locations.

|`-r, --dirs` |strings |List of *data* directories or places to store data, i.e.: '/var/vectorized/redpanda/', usually your XFS filesystem on an NVMe SSD device.

|`-d, --disks` |strings |Lists of devices to tune f.e. 'sda1'.

|`-h, --help` |- |Help for list.

|`-m, --mode` |string |Operation Mode: one of: [sq, sq_split, mq].

|`-n, --nic` |strings |Network Interface Controllers to tune.

|`--reboot-allowed` |- |If set will allow tuners to tune boot parameters and request system reboot.

|`-v, --verbose` |- |Enable verbose logging (default: false).
|===